--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple slack bot that returns gifs from the office",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,10 @@
   },
   "homepage": "https://github.com/garyhogarth/dunder-gifflin#readme",
   "dependencies": {
-    "botkit": "^0.5.1"
+    "axios": "^0.15.3",
+    "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.2",
+    "lodash": "^4.17.4"
   }
 }
